...
    "app_name" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rick & Morty"
          }
        }
      }
    },
    "appearance" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Appearance"
          }
        }
      }
    },
    "appears_in" : {
      "extractionState" : "stale",
...
    "filters" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filters"
          }
        }
      }
    },
    "genders" : {
      "extractionState" : "stale",
...
    "settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "specie_gender" : {
      "extractionState" : "stale",
...
